Tests/Bad/tiny_array.min
function main;
beginparams
endparams
beginlocals
	n : integer;
	r : array [0] of integer;
	s : array [-4] of integer;
endlocals
beginbody
	read n;
 	n := n + 1;
 	n := n + n;
 	write n;
 endbody
